// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Pager Allineamento 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <section>
      <nav
        aria-label="pagination"
        className="justify-content-center mb-3 pagination-wrapper"
      >
        <ul
          className="pagination"
        >
          <li
            className="page-item disabled"
          >
            <a
              aria-label="Previous"
              className="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  className="icon"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                  />
                </svg>
              </span>
              <span
                className="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              aria-current="page"
              className="page-link"
              href="#"
            >
              1
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              className="page-link"
              href="#"
            >
              2
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              className="page-link"
              href="#"
            >
              3
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              aria-label="Next"
              className="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  className="icon"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
              </span>
              <span
                className="sr-only"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </nav>
      <nav
        aria-label="pagination"
        className="justify-content-end mb-3 pagination-wrapper"
      >
        <ul
          className="pagination"
        >
          <li
            className="page-item disabled"
          >
            <a
              aria-label="Previous"
              className="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  className="icon"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                  />
                </svg>
              </span>
              <span
                className="sr-only"
              >
                Previous
              </span>
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              aria-current="page"
              className="page-link"
              href="#"
            >
              1
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              className="page-link"
              href="#"
            >
              2
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              className="page-link"
              href="#"
            >
              3
            </a>
          </li>
          <li
            className="page-item"
          >
            <a
              aria-label="Next"
              className="page-link"
              href="#"
            >
              <span
                aria-hidden="true"
              >
                <svg
                  className="icon"
                  style={
                    Object {
                      "ariaHidden": true,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                  />
                </svg>
              </span>
              <span
                className="sr-only"
              >
                Next
              </span>
            </a>
          </li>
        </ul>
      </nav>
    </section>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager Esempi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager Esempi interattivi 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager Responsive 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            9
          </a>
        </li>
        <li
          className="d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            10
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            <span
              className="d-sm-none"
            >
              Pagina 
            </span>
            11
          </a>
        </li>
        <li
          className="d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            12
          </a>
        </li>
        <li
          className="d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            13
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager Stato disabilitato e attivo 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            2
          </a>
        </li>
        <li
          className="page-item disabled"
        >
          <a
            className="page-link"
            href="#"
          >
            3
          </a>
        </li>
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Jump to page 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <form
        className=""
      >
        <div
          className="form-group"
        >
          <input
            className="form-control form-control"
            id="jumpToPage"
            maxLength="2"
            onBlur={[Function]}
            onFocus={[Function]}
            type="text"
          />
          <label
            className=""
            htmlFor="jumpToPage"
          >
            Vai a ...
          </label>
        </div>
      </form>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Link testuali 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="text page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              Precedente
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="text page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              Successiva
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive More 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Page changer 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <div
        className="dropdown"
        onKeyDown={[Function]}
      >
        <a
          aria-expanded={false}
          aria-haspopup={true}
          className="btn btn-dropdown dropdown-toggle"
          id="pagerChanger"
          onClick={[Function]}
        >
          pag.10
        </a>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <div
            className="link-list-wrapper"
          >
            <ul
              className="link-list"
            >
              <li>
                <a
                  className="active list-item"
                  href="#"
                >
                  pag. 10
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  pag. 20
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  pag. 30
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  pag. 40
                </a>
              </li>
              <li>
                <a
                  className="list-item"
                  href="#"
                >
                  pag. 50
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Simple mode 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            1
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            /
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            5
          </span>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Pager/Funzioni aggiuntive Total number 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      aria-label="pagination"
      className="pagination-total mb-3 pagination-wrapper"
    >
      <ul
        className="pagination"
      >
        <li
          className="page-item"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.6 17.2L9 11.6 14.6 6l.8.7-4.9 4.9 4.9 4.9z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            1
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            aria-current="page"
            className="page-link"
            href="#"
          >
            24
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            25
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            26
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            27
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            28
          </a>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <span
            className="page-link"
          >
            …
          </span>
        </li>
        <li
          className="d-none d-sm-block page-item"
        >
          <a
            className="page-link"
            href="#"
          >
            50
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
          >
            <span
              aria-hidden="true"
            >
              <svg
                className="icon"
                style={
                  Object {
                    "ariaHidden": true,
                  }
                }
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.8 17.2l-.8-.7 4.9-4.9L9 6.7l.8-.7 5.6 5.6z"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
      </ul>
      <p>
        <span
          className="sr-only"
        >
          Pagina
        </span>
         24 di 50
      </p>
    </nav>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
